Bug #14873
closedCompile failure - MinGW build as of 63768
Description
normalperson (Eric Wong),
The MinGW build (ruby-loco) on 63768 had the following error:
building .ext/include/x64-mingw32/rb_mjit_min_header-2.6.0.h
./miniruby.exe -I../ruby/lib -I. -I.ext/common ../ruby/tool/transform_mjit_header.rb "x86_64-w64-mingw32-gcc " rb_mjit_header.h .ext/include/x64-mingw32/rb_mjit_min_header-2.6.0.h
../ruby/tool/ifchange "--timestamp=.rbconfig.time" rbconfig.rb rbconfig.tmp
rbconfig.rb updated
generating enc.mk
creating verconf.h
verconf.h updated
../ruby/tool/transform_mjit_header.rb:118:in `block in check_code!': undefined method `success?' for nil:NilClass (NoMethodError)
from ../ruby/tool/transform_mjit_header.rb:181:in `block in with_code'
from C:/projects/ruby-loco/src/ruby/lib/tempfile.rb:295:in `open'
from ../ruby/tool/transform_mjit_header.rb:178:in `with_code'
from ../ruby/tool/transform_mjit_header.rb:115:in `check_code!'
from ../ruby/tool/transform_mjit_header.rb:210:in `<main>'
make: *** [uncommon.mk:224: .ext/include/x64-mingw32/rb_mjit_min_header-2.6.0.h] Error 1
make: *** Waiting for unfinished jobs....
==> ERROR: A failure occurred in build().
Aborting...
Command exited with code 1
Thanks, Greg
Updated by normalperson (Eric Wong) about 8 years ago
Greg.mpls@gmail.com wrote:
verconf.h updated
../ruby/tool/transform_mjit_header.rb:118:inblock in check_code!': undefined methodsuccess?' for nil:NilClass (NoMethodError)
Sorry for the delay. Do you SIGCHLD on that platform?
"pp Signal.list" should show it
I'm not seeing where it's failing to call rb_last_status_set
from rb_waitpid based on recent changes...
(but I had a long and tiring day dealing with stuff offline
and I'm running on fumes at this point)
Updated by MSP-Greg (Greg L) about 8 years ago
Do you SIGCHLD on that platform?
Really, not sure. But, I don't believe so. For instance, Puma describes using signaling for server control, and I think all the tests dealing with it are bypassed for windows. I'm really *nix challenged. One of these days...
PS C:\Greg\GitHub> ruby -e "pp Signal.list"
{"EXIT"=>0,
"INT"=>2,
"ILL"=>4,
"ABRT"=>22,
"FPE"=>8,
"KILL"=>9,
"SEGV"=>11,
"TERM"=>15}
Thanks, Greg
Updated by normalperson (Eric Wong) about 8 years ago
- Status changed from Open to Closed
Applied in changeset trunk|r63785.
process.c: fix typo in non-SIGCHLD waitpid :x
I expect this to fix [Bug #14873]
Updated by usa (Usaku NAKAMURA) about 8 years ago
Eric, your recent changes about process.c actually broke Windows build.
r63785 fixed a little, but test-all still reports 14904E.
I recommend to revert all commits from r63754, and restart.
Updated by normalperson (Eric Wong) about 8 years ago
usa@garbagecollect.jp wrote:
Eric, your recent changes about process.c actually broke Windows build.
r63785 fixed a little, but test-all still reports 14904E.
I recommend to revert all commits from r63754, and restart.
Can you try r63790? (Cc: you directly since ruby-core seems very slow)