process.c: fix typo in non-SIGCHLD waitpid :x

I expect this to fix [Bug #14873]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@63785 b2dd03c8-39d4-4d8f-98ff-823fe69b080e